[gd_scene load_steps=5 format=3 uid="uid://dofk5ae1xkans"]

[ext_resource type="Script" path="res://gui/upgrade_cell.gd" id="1_wsf8d"]
[ext_resource type="Texture2D" uid="uid://dvn1140oc62pa" path="res://home/icons/icon_upgrade.tres" id="2_5cm2v"]
[ext_resource type="Texture2D" uid="uid://wvp7lxnivpne" path="res://gui/hud_money.tres" id="3_6dnx5"]
[ext_resource type="Script" path="res://gui/better_button.gd" id="4_2kdp1"]

[node name="UpgradeCell" type="Panel"]
custom_minimum_size = Vector2(105, 55)
offset_left = 25.0
offset_top = 39.0
offset_right = 130.0
offset_bottom = 94.0
script = ExtResource("1_wsf8d")

[node name="NameLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -75.0
offset_top = 3.0
offset_right = -3.0
offset_bottom = 19.0
grow_horizontal = 0
text = "Upgrade name"
clip_text = true
text_overrun_behavior = 3

[node name="IconRect" type="TextureRect" parent="."]
layout_mode = 1
offset_left = 3.0
offset_top = 3.0
offset_right = 19.0
offset_bottom = 19.0
texture = ExtResource("2_5cm2v")

[node name="PurchaseButton" type="Button" parent="."]
custom_minimum_size = Vector2(0, 24)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -48.5
offset_top = -28.0
offset_right = 48.5
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 0
text = "99999"
icon = ExtResource("3_6dnx5")
alignment = 0
text_overrun_behavior = 1
icon_alignment = 2
script = ExtResource("4_2kdp1")

[connection signal="focus_entered" from="PurchaseButton" to="." method="_on_purchase_button_focus_entered"]
[connection signal="pressed" from="PurchaseButton" to="." method="_on_purchase_button_pressed"]
